--- a/src/Components/Inicio/Inicio.css
+++ b/src/Components/Inicio/Inicio.css
@@ -3,76 +3,116 @@
     padding: 0;
     box-sizing: border-box;
 }
+.body{
+    background-color: #f8e5de;;
+}
 .navbar{
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 75px;
    background-color: #262c3c;
-   color: #e29668;
+   color: #eb9b6a;
 }
-
-
 .logo{
-    font-size: 30px;
+    display: flex;
+    position: absolute;
+    top: 5px;
+    left: 34px;
+    width: 70px;
+}
+.logo-h{
+    display: flex;
+    position: absolute;
+    width: 130px;
+    top: 20px;
+    left: 110px;
+}
+.nav-social{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+   
+}
+.nav-social a{
+    text-decoration: none;
+    padding: 30px;
+    text-align: left;
+    color: #eb9b6a;
+
 }
 .nav-links{
-    display: flex;
-    justify-content: flex-end;
-    list-style: none;
-    width: 75%;
+    display: none;
+
 }
+.nav-links-mobile{
+    position: absolute;
+    display: block;
+    list-style: none;
+    background-color:#262c3c;
+    left: 0;
+    top: 75px;
+    transition: all 0.5s ease-out;
+    width: 100%;
+}
+
 .nav-link{
     text-decoration: none;
-    color: #e29668;
-    font-size: 20px;
-    padding: 10px 20px;
-    margin: 0 10px;
-    cursor: pointer;
+    color:#f8e5de;
+    text-align: center;
+    padding: 32px;
+    width: 100%;
+    transition: all 0.5 ease;
+    font-family: "Prata"; 
 }
 .wraper{
-    display: none;
+    display: block;
+    position: absolute;
+    font-size: 30px;
+    color: #eb9b6a;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    top: 15px;
+    right: 25px;
 }
 
-@media screen and (max-width:768px){
+main{
+    max-width: 1000px;
+    margin: 50px auto;
+    overflow: hidden;
+    font-family: "Poppins";
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+
+@media screen and (min-width:768px){
+  
     .logo{
-        display: flex;
-        position: absolute;
-        top: 15px;
-        left: 35px;
+        font-size: 30px;
+    }
+    .nav-social{
+        display: none;
     }
     .nav-links{
-        display: none;
-
-    }
-    .nav-links-mobile{
-        position: absolute;
-        display: block;
+        display: flex;
+        justify-content: flex-end;
         list-style: none;
-        background-color:#262c3c;
-        left: 0;
-        top: 75px;
-        transition: all 0.5s ease-out;
-        width: 100%;
+        width: 60%;
+        margin-left: 20%;
     }
-
     .nav-link{
-        color: #e29668;
-        text-align: center;
-        padding: 32px;
-        width: 100%;
-        transition: all 0.5 ease;
+        color: #eb9b6a;
+        font-size: 20px;
+        padding: 10px;
+        text-align:end;
+        margin:0;
+        cursor: pointer;
     }
     .wraper{
-        display: block;
-        position: absolute;
-        font-size: 30px;
-        color: #e29668;
-        background-color: transparent;
-        border: none;
-        outline: none;
-        top: 15px;
-        right: 25px;
+        display: none;
     }
 
 }
